<resources>
    <string name="app_name">Mobile Toolbox</string>

    <string name="cancel">Cancel</string>
    <string name="confirm_log_out_title">Confirm log out</string>
    <string name="confirm_log_out_message">Are you sure you would like to log out of this study?</string>
    <string name="yes_log_out">Yes, log out</string>
    <string name="current_activities">current activities</string>
    <string name="due_on">Due on: %1$s</string>
    <string name="opens">Opens: %1$s</string>
    <string name="number_minutes">%1$d min</string>
    <string name="good_to_go">Good to go!</string>
    <string name="funder">Funder</string>
    <string name="institution">Institution</string>
    <string name="investigator">Investigator</string>
    <string name="principal_investigator">Principal Investigator</string>
    <string name="irb_ethics_board">"IRB/Ethics Board of Record"</string>
    <string name="study_support">"Study Support"</string>
    <string name="thank_you">Thank you for your patience. \n\n You may exit the app</string>
    <string name="hang_tight">Hang tight...</string>
    <string name="please_dont_close">Please don\'t close the app quite yet, we\'re uploading your contributions to the cloud.</string>
    <string name="title_home">Home</string>
    <string name="title_past_activities">Past Activities</string>
    <string name="title_study_info">Study Info</string>
    <string name="title_account">Account</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="thank_you_for_your_contributions">Thank you for your contributions!</string>
    <string name="your_completed_activities">Your completed activities will be shown here.</string>
    <string name="minutes">minutes</string>
    <string name="nice_you_re_all_up_to_date">nice, you\'re all up to date</string>
    <string name="about_the_study">About the study</string>
    <string name="contact_and_support">Contact &amp; Support</string>
    <string name="general_support">General Support</string>
    <string name="for_general_questions">For general questions about the study or to withdraw from the study, please contact:</string>
    <string name="to_withdraw">To <b>withdraw from this study</b>, you’ll need the following info:</string>
    <string name="to_withdraw_account">To <b>withdraw</b> from this study, please contact your Study Contact from the <u><b>Study Info page.</b></u></string>
    <string name="study_id">Study ID: %1$s</string>
    <string name="study_id_bold">&lt;b>Study ID:&lt;/b> %1$s</string>
    <string name="study_id_label">Study ID:</string>
    <string name="study_id_hint">Study ID</string>
    <string name="participant_id">&lt;b>Participant ID:&lt;/b> %1$s</string>
    <string name="participant_id_label">Participant ID:</string>
    <string name="participant_id_hint">Participant ID</string>
    <string name="participant_login_error">Sorry we cannot find this participant. Please try again or contact your Study Coordinator.</string>
    <string name="find_study_error">Sorry we cannot find this study. Please try again or contact your Study Coordinator.</string>
    <string name="phone_label">Phone #:</string>
    <string name="version_label">Version:</string>
    <string name="registration_phone_number">&lt;b>Registration Phone Number:&lt;/b> %1$s</string>
    <string name="your_participant_rights">Your Participant Rights</string>
    <string name="for_questions">For questions about your rights as a research participant, please contact :</string>
    <string name="logout">Log out</string>
    <string name="welcome_please_enter_study">Welcome! Please enter your Study ID below to begin.</string>
    <string name="welcome_to_study">Welcome to %1$s</string>
    <string name="login">Login</string>
    <string name="continue_string">Continue</string>
    <string name="welcome_screen_default_body">We are excited that you will be participating. We hope that you will find this study helpful.</string>
    <string name="welcome_screen_default_salutation">Sincerely,</string>
    <string name="welcome_screen_default_from">The %1$s team</string>
    <string name="welcome_screen_disclaimer">This is a research Study. It does not provide medical advice, diagnosis, or treatment.</string>
    <string name="edit_permission">Edit Permission</string>
    <string name="notifications">Notifications</string>
    <string name="allow">Allow</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="update_the_app">Update the app to unlock new features and continue your experience.</string>
    <string name="we_are_getting_better">We\'re Getting Better</string>
    <string name="update_now">Update Now</string>
    <string name="your_results_are_uploading">Your results are uploading…</string>
    <string name="your_results_are_uploading_wait">Your results are uploading. Please wait to close the app.</string>
    <string name="please_connect_to_internet">Please connect to the internet \n to upload your results</string>

</resources>