<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    android:background="@color/backgroundGrey"
    tools:context=".ui.study.AboutStudyFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/logo_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:padding="8dp"
                android:layout_gravity="center"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:id="@+id/header"
                android:textAppearance="@style/TextAppearance.Sage.H1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Welcome to Study"/>

            <TextView
                android:id="@+id/body"
                android:textAppearance="@style/TextAppearance.Sage.P1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/welcome_screen_default_body"/>

            <TextView
                android:id="@+id/salutation"
                android:textAppearance="@style/TextAppearance.Sage.P1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/welcome_screen_default_salutation"/>

            <TextView
                android:id="@+id/from"
                android:textAppearance="@style/TextAppearance.Sage.P1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="The Study team"/>

            <TextView
                android:id="@+id/disclaimer"
                android:textAppearance="@style/TextAppearance.Sage.P1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/welcome_screen_disclaimer"/>

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_string"/>
    </LinearLayout>
</ScrollView>