<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/upload_status_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <ProgressBar
            android:id="@+id/upload_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ProgressBar>
        <TextView
            android:id="@+id/upload_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/playfair_display_italic"
            android:text="@string/your_results_are_uploading"
            android:textColor="#2A2727"
            android:textAppearance="@style/TextAppearance.Sage.H2"
            android:textAlignment="center" />
    </LinearLayout>
    <TextView
        android:id="@+id/todays_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Sage.H7"
        android:textAlignment="center"
        android:textAllCaps="true"
        tools:text="January 22, 2021"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/current_activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.Sage.H2"
        android:fontFamily="@font/playfair_display_italic"
        android:text="@string/current_activities"
        android:textColor="#2A2727"
        android:textAlignment="center" />
    <FrameLayout
        android:id="@+id/up_to_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_up_to_date_background"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/playfair_display_italic"
            android:text="@string/nice_you_re_all_up_to_date"
            android:textColor="#2A2727"
            android:textAppearance="@style/TextAppearance.Sage.H2"
            android:textAlignment="center" />
    </FrameLayout>
</LinearLayout>